--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,12 +29,14 @@ dist.jar=${dist.dir}/fxmllearn.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.openjfx-dialogs-1.0.2.jar=lib/openjfx-dialogs-1.0.2.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.openjfx-dialogs-1.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,10 +63,9 @@ javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
 javafx.classpath.extension=\
-    ${java.home}/lib/jfxrt.jar:\
-    ${java.home}/lib/javaws.jar:\
-    ${java.home}/lib/deploy.jar:\
-    ${java.home}/lib/plugin.jar
+    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
@@ -101,11 +101,13 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+mkdist.disabled=false
+platform.active=JDK_1.8
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.openjfx-dialogs-1.0.2.jar}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
